--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="container">
           <div class="text-center p-3">
             © 2022 Copyright:
-            <a class="text-white" href="https://carpark.com/">carpark.com</a>
+            <a class="text-white" href="#">carpark</a>
           </div>
         </div>
       </div>
