--- a/lantai1.html
+++ b/lantai1.html
@@ -119,6 +119,16 @@
           </div>
         </div>
     </section>
+    <footer class="mt-5">
+      <div class="footer text-white text-center">
+        <div class="container">
+          <div class="text-center p-3">
+            © 2022 Copyright:
+            <a class="text-white" href="#">carpark</a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-database.js"></script>
 
