--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                               <li class="nav-item">
                                 <a class="nav-link" href="#download-section">Download</a>
                               </li>                      
-                              <li class="nav-item">
+                              <li class="nav-item mt-2">
                                   <a class="fs-6 nav-item-area" href="lantai1.html">Area Parkir</a>
                               </li>
                             </ul>
@@ -86,7 +86,8 @@
             <div class="card wow fadeInUp" data-wow-delay=".5s" data-wow-duration="1s" data-wow-repeat="3">
               <div class="card-body">
                 <div class="card-icon p-5">
-                  <i class="fas fa-car"></i>
+                  <!-- <i class="fas fa-car"></i> -->
+                  <img src="image/car-solid.svg" width="40px" alt="">
                 </div>
                 <div class="card-text mt-4">
                   <h4>Cepat</h4>
@@ -101,7 +102,8 @@
             <div class="card card2 wow fadeInUp" data-wow-delay=".5s" data-wow-duration="1s">
               <div class="card-body">
                 <div class="card-icon p-5">
-                  <i class="fas fa-mobile"></i>
+                  <!-- <i class="fas fa-mobile"></i> -->
+                  <img src="image/icon-phone.svg" width="30px" alt="">
                 </div>
                 <div class="card-text mt-4 ">
                   <h4>Mudah</h4>
@@ -116,7 +118,8 @@
             <div class="card card3 wow fadeInUp" data-wow-delay=".5s" data-wow-duration="1s">
               <div class="card-body">
                 <div class="card-icon p-5">
-                  <i class="fas fa-check"></i>
+                  <!-- <i class="fas fa-check"></i> -->
+                  <img src="image/icon-cek.svg" width="40px" alt="">
                 </div>
                 <div class="card-text mt-4">
                   <h4>Smart City</h4>
@@ -137,7 +140,7 @@
                   <div class="download-image">
                     <div class="download-shape-1">      
                     </div>
-                    <img src="image/coba.png" class="image-download wow fadeInLeftBig" data-wow-delay=".3s" alt="">
+                    <img src="image/pictandro.png" class="image-download wow fadeInLeftBig" data-wow-delay=".3s" alt="">
                   </div>
                 </div>
                 <div class="col-lg-6">
